moved demo logic into system; new system function for file selection

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=678,41
+Pos=677,36
 Size=550,680
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=245,168
+Pos=302,218
 Size=362,304
 Collapsed=0
 
@@ -21,5 +21,15 @@ Collapsed=0
 [Window][Example: Console]
 Pos=60,60
 Size=520,600
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=74,0
+Size=420,391
+Collapsed=0
+
+[Window][Dear ImGui Style Editor]
+Pos=60,60
+Size=353,698
 Collapsed=0
 
