added reaaaally basic ImGui CPU interface

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=677,36
+Pos=725,28
 Size=550,680
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=488,189
+Pos=258,170
 Size=362,304
 Collapsed=0
 
@@ -31,5 +31,10 @@ Collapsed=0
 [Window][Dear ImGui Style Editor]
 Pos=60,60
 Size=353,698
+Collapsed=0
+
+[Window][CPU Debug Window]
+Pos=60,60
+Size=295,231
 Collapsed=0
 
