added a bunch of changes. Probably broke some stuff

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,12 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=725,28
+Pos=536,47
 Size=550,680
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=258,170
+Pos=160,267
 Size=362,304
 Collapsed=0
 
@@ -29,12 +29,27 @@ Size=420,391
 Collapsed=0
 
 [Window][Dear ImGui Style Editor]
-Pos=60,60
+Pos=191,6
 Size=353,698
 Collapsed=0
 
 [Window][CPU Debug Window]
+Pos=394,34
+Size=192,207
+Collapsed=0
+
+[Window][Game rendering]
+Pos=74,45
+Size=386,215
+Collapsed=0
+
+[Window][About Dear ImGui]
 Pos=60,60
-Size=295,231
+Size=569,109
+Collapsed=0
+
+[Window][PPU Debug Window]
+Pos=592,34
+Size=179,336
 Collapsed=0
 
